fixed overflow on collection gallery text

--- a/sites/all/themes/custom/whoi_manuscripts/css/collection-gallery-style.css
+++ b/sites/all/themes/custom/whoi_manuscripts/css/collection-gallery-style.css
@@ -37,7 +37,6 @@
 .collection_gallery_row .content{
     float: left;
     position: relative;
-    width: 100%;
     font-weight: normal;
     font-size: inherit;
     font-style: normal;
